--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
 </head>
 <body>
-                <div class="nav__toggle" id="nav-toggle">
-                   <i class="ri-apps-2-line"></i>
-                </div>
+     
              </nav>
           </header>
           <!-- <img src="img/img-bg.svg" alt="image" class="home__bg"> -->
@@ -76,8 +74,9 @@
          <p>1. Русский язык</p>
          <p>2. История</p>
          <p>3. Информатика</p>
-         <p>4. Госправо</p>
-         <p>5. Физкультура</p>
+         <p>4. Алгебра</p>
+         <p>5. Госправо</p>
+         <p>6. Физкультура</p>
          <!-- <p>6. Биология</p> -->
       </div>
       <img src="IMG/lantern-2.svg" class="lantern-2">
@@ -139,6 +138,6 @@
           <!-- ScrollReveal -->
           <script src="https://unpkg.com/scrollreveal"></script>
           <!-- JS -->
-    <script src="JS/Расписание 7-А Класс.js"></script>
+    <script src="JS/script.js"></script>
    </body>
 </html>
